屏蔽暂未开放的功能

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -82,19 +82,22 @@
 
 			var askChannel = '1';
 			events.addTap('take_pic', function() {
-				camera.getPic(camera.getCamera(), function(path) {
-
-				});
+				mui.toast('此功能暂未开放');
+//				camera.getPic(camera.getCamera(), function(path) {
+//
+//				});
 			});
 			events.addTap('take_camero', function() {
-				camera.getVideo(camera.getCamera(), function(path) {
-
-				});
+				mui.toast('此功能暂未开放');
+//				camera.getVideo(camera.getCamera(), function(path) {
+//
+//				});
 			});
 			events.addTap('get_gallery', function() {
-				gallery.getMultiplePic(function(paths) {
-
-				});
+				mui.toast('此功能暂未开放');
+//				gallery.getMultiplePic(function(paths) {
+//
+//				});
 			});
 			events.addTap('publish', function() {
 				console.log(1111111)
