--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -77,19 +77,22 @@
 				title.innerText = userInfo.unick;
 
 				events.addTap('take_pic', function() {
-					camera.getPic(camera.getCamera(), function(path) {
+					mui.toast('此功能暂未开放');
+//					camera.getPic(camera.getCamera(), function(path) {
 
-					});
+//					});
 				});
 				events.addTap('take_camero', function() {
-					camera.getVideo(camera.getCamera(), function(path) {
+					mui.toast('此功能暂未开放');
+//					camera.getVideo(camera.getCamera(), function(path) {
 
-					});
+//					});
 				});
 				events.addTap('get_gallery', function() {
-					gallery.getMultiplePic(function(paths) {
+					mui.toast('此功能暂未开放');
+//					gallery.getMultiplePic(function(paths) {
 
-					});
+//					});
 				});
 
 				//发布按钮
