--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -58,19 +58,22 @@
 				getGroupPersons(groupInfo.classId);
 			});
 			events.addTap('take_pic', function() {
-				camera.getPic(camera.getCamera(), function(path) {
-
-				});
+//				camera.getPic(camera.getCamera(), function(path) {
+//
+//				});
+				mui.toast('功能暂未开放！');
 			});
 			events.addTap('take_camero', function() {
-				camera.getVideo(camera.getCamera(), function(path) {
-
-				});
+//				camera.getVideo(camera.getCamera(), function(path) {
+//
+//				});
+					mui.toast('功能暂未开放！');
 			});
 			events.addTap('get_gallery', function() {
-				gallery.getMultiplePic(function(paths) {
-
-				});
+//				gallery.getMultiplePic(function(paths) {
+//
+//				});
+				mui.toast('功能暂未开放！');
 			});
 			//发布按钮
 			events.addTap('publish', function() {
