--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -13,7 +13,7 @@
 
 	<body>
 		<div class="mui-content">
-			<div>
+			<!--<div>
 				<div class="experts-show">
 					<p><span class="mui-icon iconfont icon-zhuanjia expert-icon"></span>专家风采</p>
 				</div>
@@ -39,7 +39,7 @@
 				        </a>
 				    </div>
 				</div>
-			</div>
+			</div>-->
 			<div class="mui-scroll">
 				<ul id="list-container" class="mui-table-view">
 				</ul>
