添加关于界面

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -37,7 +37,7 @@
 				</div>
 				<div style="margin-left: 10px;">
 				<div class="mui-checkbox mui-left mui-disabled" style="width:100; height:30px; float:left; display:inline;margin-left: -20px;">
-					<label style="font-size: 15px;">家校圈</label>
+					<label style="font-size: 15px;">空间</label>
 					<input name="checkbox" value="0" type="checkbox" disabled="disabled" style="margin-top: -7px;" checked>
 				</div>
 				<div class="mui-checkbox mui-left" style="width:100; height:30px; float:left; display:inline; ">
