--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -85,7 +85,7 @@
 				}
 			});
 			mui('.mui-scroll-wrapper').scroll({
-				 indicators: true, //是否显示滚动条
+				indicators: true, //是否显示滚动条
 			});
 			//获得侧滑主窗口webview对象
 			var main = null;
@@ -95,9 +95,9 @@
 				var curPage = plus.webview.currentWebview();
 				main = curPage.opener();
 				curPage.addEventListener("show", function(e) {
-					mui('.mui-scroll-wrapper').scroll().scrollTo(0,0,100);//100毫秒滚动到顶
-				})
-				//展示个人信息
+						mui('.mui-scroll-wrapper').scroll().scrollTo(0, 0, 100); //100毫秒滚动到顶
+					})
+					//展示个人信息
 				getInfo();
 				//				events.jumpPage(document.getElementById('title'),'mine/account-info.html');
 				//点击title跳转到账号信息界面
@@ -157,8 +157,8 @@
 							break;
 							//关于
 						case 7:
-							mui.toast('施工中,请稍候...');
-							//							events.openNewWindow('/html/mine/group-info.html')
+							//							mui.toast('施工中,请稍候...');
+							events.openNewWindow('/html/mine/about.html')
 							break;
 
 						default:
@@ -200,7 +200,7 @@
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 				postDataPro_PostGrInvC({}, wd, function(data) {
 					wd.close();
-//					console.log('我的界面获取的新消息数目：' + JSON.stringify(data));
+					//					console.log('我的界面获取的新消息数目：' + JSON.stringify(data));
 					var num = document.getElementById('news-amount');
 					if(data.RspCode == '0000') {
 						num.style.display = 'inline';
