--- a/JiaoBaoYun-hb/html/quan/leave-sub.html
+++ b/JiaoBaoYun-hb/html/quan/leave-sub.html
@@ -98,11 +98,11 @@
 	</head>
 
 	<body>
-		<footer id="footer" class="mui-bar-tab">
+		<footer id="footer" class="mui-bar-tab" style="display: block;">
 			<div class="footer-center">
-				<textarea onblur="inputOnblur(this)" id='msg-content' type="text" class='input-text' placeholder=""></textarea>
+				<textarea onblur="inputOnblur(this)" onfocus="setStyle(this.id)" id='msg-content' type="text" class='input-text' placeholder=""></textarea>
 			</div>
-			<button id='btn-reply' class="mui-btn btn-commit">发送</button>
+			<button id='btn-reply' class="mui-btn  btn-commit">发送</button>
 		</footer>
 		<!--下拉刷新容器-->
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
@@ -185,6 +185,14 @@
 			//			//			mui('.mui-popover').popover('hide');
 			//
 			//		}
+		function setStyle(x) {
+			
+			var replyContainer = document.getElementById('footer');
+			document.getElementById('footer').className = 'mui-bar-tab';
+			replyContainer.style.display = 'block';
+			showSoftInput('#msg-content');
+		}
+
 		function inputOnblur(input) { //失去焦点事件
 			if(input.id == 'msg-content') {
 				var inputComment = document.getElementById("msg-content");
@@ -416,7 +424,7 @@
 					'<img class=" dynamic-personal-image" src="' + leaveArray[i].uimg + '">' +
 					'</div>' +
 					'<div class="mui-media-body dynamic-padding-left-10px">' +
-					'<h6>' + events.shortForString(leaveArray[i].unick,12) + '</h6>' +
+					'<h6>' + events.shortForString(leaveArray[i].unick, 12) + '</h6>' +
 					'</div></div>' +
 					'<div style= "margin-top:-10px"  class = "chat_content_left">' +
 					leaveArray[i].MsgContent +
@@ -425,32 +433,32 @@
 				for(var j = 0; j < commentArr.length; j++) {
 					var li = document.createElement('li');
 					li.className = 'mui-table-view-cell ableSelectedCell1';
-					if(commentArr[j].UserId!=userId){
+					if(commentArr[j].UserId != userId) {
 						li.innerHTML = '<div style="padding:12px">' +
-					'<div class="mui-media-body mui-pull-left">' +
-					'<img class=" dynamic-personal-image" src="' + commentArr[j].uimg + '">' +
-					'</div>' +
-					'<div class="mui-media-body dynamic-padding-left-10px">' +
-					'<h6>' + commentArr[j].unick + '</h6>' +
-					'</div></div>' +
-					'<div style= "margin-top:-10px"  class = "chat_content_left">'+ '<span style = "color:rgb(43,176,238);font-size:14px;" class="mui-ellipsis">' +
-						'@' + commentArr[j].ReplyIdName + '</span> ' +
-					commentArr[j].MsgContent +
-					'<p style="float:right">' + commentArr[j].MsgDate + '</p></div>'
-					}else{
+							'<div class="mui-media-body mui-pull-left">' +
+							'<img class=" dynamic-personal-image" src="' + commentArr[j].uimg + '">' +
+							'</div>' +
+							'<div class="mui-media-body dynamic-padding-left-10px">' +
+							'<h6>' + commentArr[j].unick + '</h6>' +
+							'</div></div>' +
+							'<div style= "margin-top:-10px"  class = "chat_content_left">' + '<span style = "color:rgb(43,176,238);font-size:14px;" class="mui-ellipsis">' +
+							'@' + commentArr[j].ReplyIdName + '</span> ' +
+							commentArr[j].MsgContent +
+							'<p style="float:right">' + commentArr[j].MsgDate + '</p></div>'
+					} else {
 						li.innerHTML = '<div style="padding:12px">' +
-						'<div class="mui-media-body mui-pull-right">' +
-						'<img class=" dynamic-personal-image" src="' + commentArr[j].uimg + '">' +
-						'</div>' +
-						'<div class="mui-media-body" style = "text-align: right;padding-right:10px">' +
-						'<h6>' + commentArr[j].unick+ '</h6>' +
-						'</div></div>' +
-						'<div style= "margin-top:-5px; "  class = "chat_content_right">' + '<div class="chat-body ">' +
-						'<div >' + '<span style = "font-size:14px;" class=" mui-pull-right">' +'<span style = "color:rgb(43,176,238);">'+
-						'@' + commentArr[j].ReplyIdName +'</span>' +'<span>'+" "+
-						commentArr[j].MsgContent+ '</span> '+ '</span> ' + '<p class="mui-pull-left">' + commentArr[j].MsgDate + '</p></div></div></div>';
+							'<div class="mui-media-body mui-pull-right">' +
+							'<img class=" dynamic-personal-image" src="' + commentArr[j].uimg + '">' +
+							'</div>' +
+							'<div class="mui-media-body" style = "text-align: right;padding-right:10px">' +
+							'<h6>' + commentArr[j].unick + '</h6>' +
+							'</div></div>' +
+							'<div style= "margin-top:-5px; "  class = "chat_content_right">' + '<div class="chat-body ">' +
+							'<div >' + '<span style = "font-size:14px;" class=" mui-pull-right">' + '<span style = "color:rgb(43,176,238);">' +
+							'@' + commentArr[j].ReplyIdName + '</span>' + '<span>' + " " +
+							commentArr[j].MsgContent + '</span> ' + '</span> ' + '<p class="mui-pull-left">' + commentArr[j].MsgDate + '</p></div></div></div>';
 					}
-					
+
 					ul.appendChild(li);
 					//					'</font></div>';
 				}
