查看点赞和浏览列表，增加取消点赞功能

--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -21,6 +21,16 @@
 				<ul id="classSpace_list" class="mui-table-view">
 				</ul>
 			</div>
+			<div id="popover" class="mui-popover">
+				<ul class="mui-table-view">
+					<li class="mui-table-view-cell">
+						<a id="zan" href="#">点赞</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a id="check" href="#">查看</a>
+					</li>				
+				</ul>
+			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<!--<script type="text/javascript">
