--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -47,6 +47,12 @@
 						设置家校圈权限
 					</a>
 				</li>
+				<li class="mui-table-view-cell">
+					<a class="mui-navigate-right">
+							<p class="info-remark">地区</p>
+						<span id="person-area" class="mui-badge person-space">青岛</span>
+					</a>
+				</li>
 			</ul>
 		</div>
 		<script src="../../js/mui.min.js"></script>
