--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -26,12 +26,12 @@
 
 				<!--各项-->
 				<ul class="mui-table-view mui-table-view-chevron">
-					<li class="mui-table-view-cell" position='1'>
+					<li class="mui-table-view-cell" position='0'>
 						<a class="mui-navigate-right" open-type="common">
 							<span class="mui-icon iconfont icon-group"></span> 群管理
 						</a>
 					</li>
-					<li class="mui-table-view-cell" position='0'>
+					<li class="mui-table-view-cell" position='1'>
 						<a class="mui-navigate-right" open-type="common">
 							<span class="mui-icon iconfont icon-qunziliao"></span> 人员资料
 						</a>
@@ -124,13 +124,15 @@
 						closeMenu();
 					}
 					switch(parseInt(this.getAttribute('position'))) {
-						//群资料
-						case 0:
-							events.openNewWindow('/html/mine/qun_data.html');
+						case 0: //群管理
+							events.openNewWindowWithData('/html/mine/qun_manage_main.html', {
+								type: '0' //0群管理,1人员资料
+							});
 							break;
-							//群管理
-						case 1:
-							events.openNewWindow('/html/mine/qun_manage.html');
+						case 1: //人员资料
+							events.openNewWindowWithData('/html/mine/qun_manage_main.html', {
+								type: '1' //0群管理,1人员资料
+							});
 							break;
 							//申请加入群
 						case 2:
