--- a/JiaoBaoYun-hb/html/mine/qun_manage_data_sub.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_data_sub.html
@@ -46,7 +46,7 @@
 				setTimeout(function() {
 					var table = document.body.querySelector('.mui-table-view');
 					var cells = document.body.querySelectorAll('.mui-table-view-cell');
-					for (var i = cells.length, len = i + 3; i < len; i++) {
+					for(var i = cells.length, len = i + 3; i < len; i++) {
 						var li = document.createElement('li');
 						li.className = 'mui-table-view-cell';
 						li.innerHTML = '<a class="mui-navigate-right">Item ' + (i + 1) + '</a>';
@@ -65,7 +65,7 @@
 					mui('#pullrefresh').pullRefresh().endPullupToRefresh((++count > 2)); //参数为true代表没有更多数据了。
 					var table = document.body.querySelector('.mui-table-view');
 					var cells = document.body.querySelectorAll('.mui-table-view-cell');
-					for (var i = cells.length, len = i + 20; i < len; i++) {
+					for(var i = cells.length, len = i + 20; i < len; i++) {
 						var li = document.createElement('li');
 						li.className = 'mui-table-view-cell';
 						li.innerHTML = '<a class="mui-navigate-right">Item ' + (i + 1) + '</a>';
@@ -73,18 +73,14 @@
 					}
 				}, 1500);
 			}
-			if (mui.os.plus) {
-				mui.plusReady(function() {
-					setTimeout(function() {
-						mui('#pullrefresh').pullRefresh().pullupLoading();
-					}, 1000);
 
+			mui.plusReady(function() {
+				mui.plusReady(function() {
+					var main = plus.webview.currentWebview(); //获取当前窗体对象
+					var data = main.data; //接收A页面传入参数值
+					console.log('qun_manage_data_sub.html:' + JSON.stringify(data));
 				});
-			} else {
-				mui.ready(function() {
-					mui('#pullrefresh').pullRefresh().pullupLoading();
-				});
-			}
+			});
 		</script>
 	</body>
 
